create eCommerce Cards V1 section-Home Page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
                 </div>
         </div>
     </header>
+
+    <main>
+        <section class="collection-section py-20">
+           <div class="container mx-auto text-center">
+            <div class="products grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="product flex flex-col gap-3">
+              <img src="./assets/img/Home Page/collection/1.png" class="w-full"/>
+              <h2 class="font-semibold">TABLEWARE</h2>
+              </div>
+              <div class="product flex flex-col gap-3">
+              <img src="./assets/img/Home Page/collection/2.png" class="w-full"/>
+              <h2 class="font-semibold">HOME DECOR</h2>
+              </div>
+              <div class="product flex flex-col gap-3">
+              <img src="./assets/img/Home Page/collection/3.png" class="w-full"/>
+              <h2 class="font-semibold">HOLIDAY</h2>
+              </div>
+              <div class="product flex flex-col gap-3">
+              <img src="./assets/img/Home Page/collection/4.png" class="w-full"/>
+              <h2 class="font-semibold">COLLECTION</h2>
+              </div>
+            </div>
+           </div>
+        </section>
+    </main>  
+
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 </body>
 </html>
