create hero section Home-Page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
     </header>
 
     <main>
+<section class="w-full h-160 relative flex flex-col md:block">
+  <!--bg-img-->
+  <img src="./assets/img/Home Page/sec2_coffeebg/bg_sec2.png" alt="" class="w-full h-[398px] md:absolute md:w-full md:h-full"/>
+  <div class="w-full bg-[#826f66] flex items-center justify-center py-10 md:absolute md:left-[165px] md:top-0 md:h-[640px] md:w-[420px]">
+    <div class="text-center text-white max-w-[420px] px-6"> 
+      <div class="flex justify-center mb-6">
+        <div class="w-[86px] h-[82px] flex items-center justify-center">
+          <img src="./assets/img/Home Page/sec2_coffeebg/Icon.svg"/>
+        </div>
+      </div>
+      <p class="text-[#FFFDFB]">Handcrafted in Viet Nam since 1650</p>
+      <h1 class="text-3xl md:text-4xl font-serif mt-4">BAT TRANG<br/>DINNER SET</h1>
+      <button class="mt-8 bg-white text-[#826F66] px-8 py-3 text-sm hover:bg-gray-200 transition">SHOP NOW</button>
+    </div>
+  </div>
+</section>
+
         <section class="collection-section py-20">
            <div class="container mx-auto text-center">
             <div class="products grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
