create ecommerce section Home-Page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HOME PAGE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./assets/css/output.css" rel="stylesheet">
@@ -49,7 +50,7 @@
 <section class="w-full h-160 relative flex flex-col md:block">
   <!--bg-img-->
   <img src="./assets/img/Home Page/sec2_coffeebg/bg_sec2.png" alt="" class="w-full h-[398px] md:absolute md:w-full md:h-full"/>
-  <div class="w-full bg-[#826f66] flex items-center justify-center py-10 md:absolute md:left-[165px] md:top-0 md:h-[640px] md:w-[420px]">
+  <div class="w-full bg-[#826f66] flex items-center justify-center py-5 md:absolute md:left-[165px] md:top-0 md:h-[640px] md:w-[420px]">
     <div class="text-center text-white max-w-[420px] px-6"> 
       <div class="flex justify-center mb-6">
         <div class="w-[86px] h-[82px] flex items-center justify-center">
@@ -63,7 +64,7 @@
   </div>
 </section>
 
-        <section class="collection-section py-20">
+        <section class="collection-section pb-15 pt-20">
            <div class="container mx-auto text-center">
             <div class="products grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
             <div class="product flex flex-col gap-3">
@@ -85,6 +86,23 @@
             </div>
            </div>
         </section>
+
+<section class="w-full bg-white pb-[40px]">
+           <div class="max-w-[1035px] mx-auto flex flex-col md:flex-row">
+            <div class="w-full md:w-1/2 bg-[#F7F6F5] flex items-center justify-center h-[350px]">
+              <div class="text-center max-w-[380px] px-6">
+        <p class="sm:text-2xl font-family font-bold  text-[#3A3845]">UP TO 40% OFF OUR<br/>CHRISTMAS COLLECTION</p>
+        <p class="mt-5 text-[#595667] text-sm">Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam neque ultrices.</p>
+        <button class="mt-6 border-b border-[#3A3845] font-bold text-sm">SHOP NOW</button>
+             </div>
+            </div>
+
+    <div class="w-full md:w-1/2 h-[348px]">
+      <img src="./assets/img/Home Page/ecomm_cards/image.png" alt="" class="h-full object-cover">
+    </div>
+
+  </div>
+</section>
     </main>  
 
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
