--- a/index.html
+++ b/index.html
@@ -100,10 +100,99 @@
     <div class="w-full md:w-1/2 h-[348px]">
       <img src="./assets/img/Home Page/ecomm_cards/image.png" alt="" class="h-full object-cover">
     </div>
-
   </div>
 </section>
-    </main>  
+
+<section class="w-full pb-10">
+  <div class="max-w-[1440px] mx-auto min-[420px]:px-6 sm:px-[30px] md:px-[60px] lg:px-[115px]">
+
+    <p class="text-center text-[30px] sm:text-[30px] md:text-[30px] text-[#3A3845] font-family font-bold mb-6 sm:mb-6">BEST SELLERS</p>
+
+    <div class="grid grid-cols-1 min-[420px]:grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-x-4 gap-y-10 sm:gap-x-6 sm:gap-y-10">
+
+<!--products-->
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/1.png" class="w-full"/>
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845]">SMALL ECRU CERAMIC COMPOTE</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/2.png" class="w-full" />
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845] uppercase">Warrick White Vase 14"</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit tortor eu.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/3.png" class="w-full" />
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845] uppercase">Porcelain Dinner Plate</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse bolli tetur.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/4.png" class="w-full" />
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845] uppercase">Warrick White Vase 20</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit tortor eu.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/5.png" class="w-full" />
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845] uppercase">Rounded Dual Handled Vase</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit tortor eu.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/6.png" class="w-full"/>
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845] uppercase">Marin White Dinner Plate</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/7.png" class="w-full" />
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845] uppercase">Tall Cream Ceramic Vase</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+
+      <div class="card flex flex-col h-full max-sm:text-center">
+        <img src="./assets/img/Home Page/Best Sellers/8.png" class="w-full" />
+        <div>
+          <p class="mt-4 sm:mt-5 text-[13px] sm:text-[13px] md:text-[14px] font-small font-semibold text-[#3A3845] uppercase">Luana Bowl</p>
+          <p class="text-[14px] sm:text-[14px] md:text-[14px] mt-1 font-small font-semibold text-[#3A3845]">$49.00</p>
+          <p class="font-small text-[12px] sm:text-[12px] md:text-[12px] text-[#807F86] mt-2 sm:mt-3 pb-2.5">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit tortor eu.</p>
+        </div>
+        <button class="mt-auto w-full px-3 py-2 sm:px-5 sm:py-3 border border-[#3A3845] text-[#3A3845] text-[12px] sm:text-[12px] font-small font-semibold hover:bg-gray-800 hover:text-green-500 transition duration-600">ADD TO CART</button>
+      </div>
+    </div>
+  </div>
+</section>
 
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 </body>
