create OUR BLOG section-Home Page

--- a/index.html
+++ b/index.html
@@ -245,6 +245,25 @@
       </div>
       </div>
       </section>
+
+      <section class="w-full  pb-[40px] px-4 sm:px-6 md:px-0">
+        <p class="uppercase text-center text-[30px] sm:text-[30px] md:text-[30px] text-[#3A3845] font-family font-bold mb-6 sm:mb-6">Our Blog</p>
+  <div class="max-w-[1035px] mx-auto flex flex-col-reverse md:flex-row">
+
+    <div class="w-full md:w-1/2 bg-[#F7F6F5] flex items-center justify-center h-auto md:h-[350px] py-10 md:py-0">
+      <div class="text-center max-w-[380px] px-4 sm:px-6">
+        <p class="pb-[24px] uppercase font-small font-semibold text-[#807F86] text-[18px] sm:text-[18px] md:text-[18px]">TableWare</p>
+        <p class="uppercase font-family font-bold text-[#3A3845] text-[18px] sm:text-[22px] md:text-[24px]">The secrets to a<br/>kitchen room</p>
+        <p class="font-small mt-5 text-[#595667] text-[13px] sm:text-[14px] md:text-[15px]">Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam neque ultrices.</p>
+        <button class="mt-6 border-b border-[#3A3845] font-bold text-[12px] sm:text-[13px] md:text-[14px]">READ MORE</button>
+      </div>
+    </div>
+
+    <div class="w-full md:w-1/2 h-[250px] sm:h-[300px] md:h-[348px]">
+      <img src="./assets/img/Home Page/Blog/image.png" alt="" class="w-full h-full object-cover">
+    </div>
+  </div>
+</section>
 </main>
 
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
