create Sign Up section-Home Page

--- a/index.html
+++ b/index.html
@@ -264,6 +264,17 @@
     </div>
   </div>
 </section>
+
+<section class="bg-[#FFFFFF] pt-[40px]">
+    <div class="max-w-2xl mx-auto px-4 text-center">
+    <p class="font-small font-semibold text-xs tracking-wide text-[#595667]">Sign up for emails</p>
+    <h2 class="mt-2 text-lg md:text-xl font-family font-bold tracking-widest text-[#3A3845]">FOR NEWS, COLLECTIONS & MORE</h2>
+    <div class="mt-8">
+      <input type="email" placeholder="Enter your email address" class="w-[389px] h-[40px] bg-transparent border-b border-[#3A3845]  border:border-black text-center text-sm" />
+    </div>
+    <button class="font-small font-semibold text-[#3A3845] mt-6 px-6 py-2 border border-gray-600 text-sm tracking-wide hover:bg-gray-700 hover:text-white transition duration-700">SIGN UP</button>
+  </div>
+</section>
 </main>
 
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
